--- a/index.html
+++ b/index.html
@@ -7,5 +7,20 @@
     <link href="style.css" rel="stylesheet" type="text/css" />
   </head>
   <body>
+  	<header>
+  		<div class="name">Daniel Lovette</div>
+  		<div class="description">Software Developer</div>
+  	</header>
+  	<main>
+  		<img src="images/profile_pic.jpg"
+  		<article>
+	  		<section id="intro">Hi! I'm Daniel Lovette, a software developer in Austin, Texas.</section>
+	  		<hr>
+	  		<section id="about"></section>
+	  		<hr>
+	  		<section id="contact"></section>
+  		</article>
+  	</main>
+  	<footer>Copyright 2020 Evil Corporation, Ltd.</footer>
   </body>
 </html>
