--- a/index.html
+++ b/index.html
@@ -8,18 +8,84 @@
   </head>
   <body>
   	<header>
-  		<div class="name">Daniel Lovette</div>
-  		<div class="description">Software Developer</div>
+  		<h1>Daniel Lovette</h1>
+  		<h2>Software Developer</h2>
   	</header>
   	<main>
-  		<img src="images/profile_pic.jpg"
+  		<div class="center-contents">
+  		<div>
+  			<img src="images/profile_pic.jpg" width="400">
+  		</div>
   		<article>
-	  		<section id="intro">Hi! I'm Daniel Lovette, a software developer in Austin, Texas.</section>
+	  		<section id="intro">
+	  			<h2>A Strange Introduction</h2>
+		  		<div class="contents-left">
+		  			<p>
+		  			Who is this guy?
+		  			<ul>
+		  				<li>Some dev named Dan.</li>
+		  			</ul>
+
+		  			Where is he at?
+		  			<ul>
+		  				<li>Currently located in Austin, Texas, the United States of America, so-called "greatest country in the world", pending reclassification.</li>
+		  			</ul>
+
+		  			Why should I care?
+		  			<ul>
+		  				<li>Put down your phone and sit up!  Something important is about to happen!</li>
+		  			</ul>
+		  			</p>
+	  			</div>
+	  		</section>
 	  		<hr>
-	  		<section id="about"></section>
+	  		<section id="about">
+	  			<h2>Something About That Guy</h2>
+	  			<div class="contents-left">
+		  			How does he describe himself?
+		  			<ul>
+		  				<li>Enjoys creating delightful experiences for all</li>
+		  				<li>Loves to sink his shiny teeth into a good technical problem</li>
+		  					<ul>
+		  						<li>Web Applications</li>
+		  						<li>Databases</li>
+		  						<li>APIs</li>
+		  					</ul>
+		  				<li>It's like a good MLT</li>
+		  					<ul>
+		  						<li>Mutton</li>
+		  						<li>Lettuce</li>
+		  						<li>Tomato</li>
+		  					</ul>
+		  				<li>When the mutton is very lean...</li>
+		  			</ul>
+
+		  			What about his personality profile?
+		  			<ul><li>It reads, "Plays well with others..."</li></ul>
+
+		  			Anything else?
+
+		  			<ul><li>He enjoys geeking out over</li>
+		  				<ul>
+		  					<li>Vintage synthesizers</li>
+		  					<li>Polyrhythms</li>
+		  					<li>Hypnotic textures</li>
+		  					<li>And other balderdash!</li>
+		  				</ul>
+		  			</ul>
+
+	  			</div>
+	  		</section>
 	  		<hr>
-	  		<section id="contact"></section>
+	  		<section id="contact">
+	  			<h2>Where Can I Find A Coder Like That?</h2>
+  				<div class="spacey"><a href="https://www.linkedin.com/in/daniel-lovette-35571766/">LinkedIn</a></div>
+  				<div class="spacey"><a href="https://github.com/dfunklove">GitHub</a></div>
+  				<div class="spacey">Thanks for reading, and remember: DON'T PANIC!</div>
+	  		</section>
   		</article>
+  		</div>
+  		</div>
   	</main>
   	<footer>Copyright 2020 Evil Corporation, Ltd.</footer>
   </body>
