Add images and tweak styles.

--- a/index.html
+++ b/index.html
@@ -4,11 +4,13 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
     <title>Daniel Lovette | Software Developer</title>
+    <link href="https://cdn.jsdelivr.net/npm/normalize.css@8.0.1/normalize.css" rel="stylesheet" type="text/css" />
     <link href="style.css" rel="stylesheet" type="text/css" />
   </head>
   <body>
   	<header>
   		<h1>Daniel Lovette</h1>
+  		<img src="images/oldpc.png" width="100px" />
   		<h2>Software Developer</h2>
   	</header>
   	<main>
@@ -79,14 +81,18 @@
 	  		<hr>
 	  		<section id="contact">
 	  			<h2>Where Can I Find A Coder Like That?</h2>
-  				<div class="spacey"><a href="https://www.linkedin.com/in/daniel-lovette-35571766/">LinkedIn</a></div>
-  				<div class="spacey"><a href="https://github.com/dfunklove">GitHub</a></div>
-  				<div class="spacey">Thanks for reading, and remember: DON'T PANIC!</div>
+	  			<ol>
+  					<li class="spacey"><a href="https://www.linkedin.com/in/daniel-lovette-35571766/">LinkedIn</a></li>
+  					<li class="spacey"><a href="https://github.com/dfunklove">GitHub</a></li>
+  					<li class="spacey"><a href="https://twitter.com/dfunklove">Twitter</a></li>
+  				</ol>
+  				<p class="spacey tall">Thanks for reading, and remember: DON'T PANIC!</p>
+  				<img src="/images/hitchhiker.jpg" width="100px" />
 	  		</section>
   		</article>
   		</div>
   		</div>
   	</main>
-  	<footer>Copyright 2020 Evil Corporation, Ltd.</footer>
+  	<footer>&copy; 2020 Evil Corporation, Ltd.</footer>
   </body>
 </html>
