--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
   <body>
   	<header>
   		<h1>Daniel Lovette</h1>
-  		<img src="images/oldpc.png" width="100px" />
+  		<img src="images/oldpc.png" width="100px" alt="8 bit computer" />
   		<h2>Software Developer</h2>
   	</header>
   	<main>
   		<div class="center-contents">
   		<div>
-  			<img src="images/profile_pic.jpg" width="400">
+  			<img src="images/profile_pic.jpg" width="400" alt="profile picture">
   		</div>
   		<article>
 	  		<section id="intro">
@@ -86,8 +86,9 @@
   					<li class="spacey"><a href="https://github.com/dfunklove">GitHub</a></li>
   					<li class="spacey"><a href="https://twitter.com/dfunklove">Twitter</a></li>
   				</ol>
-  				<p class="spacey tall">Thanks for reading, and remember: DON'T PANIC!</p>
-  				<img src="/images/hitchhiker.jpg" width="100px" />
+  				<p class="spacey tall">Thanks for reading, and remember...</p>
+  				<p class="emphatic">DON'T PANIC!</p>
+  				<img src="/images/hitchhiker.jpg" width="100px" alt="thumb in space" />
 	  		</section>
   		</article>
   		</div>
