--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
   				</ol>
   				<p class="spacey tall">Thanks for reading, and remember...</p>
   				<p class="emphatic">DON'T PANIC!</p>
-  				<img src="/images/hitchhiker.jpg" width="100px" alt="thumb in space" />
+  				<img src="images/hitchhiker.jpg" width="100px" alt="thumb in space" />
 	  		</section>
   		</article>
   		</div>
