Make the HTML valid.

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <body>
   	<header>
   		<h1>Daniel Lovette</h1>
-  		<img src="images/oldpc.png" width="100px" alt="8 bit computer" />
+  		<img src="images/oldpc.png" width="100" alt="8 bit computer" />
   		<h2>Software Developer</h2>
   	</header>
   	<main>
@@ -19,10 +19,10 @@
   			<img src="images/profile_pic.jpg" width="400" alt="profile picture">
   		</div>
   		<article>
+  			<h6 class="hidden">Down the Rabbit Hole</h6>
 	  		<section id="intro">
 	  			<h2>A Strange Introduction</h2>
 		  		<div class="contents-left">
-		  			<p>
 		  			Who is this guy?
 		  			<ul>
 		  				<li>Some dev named Dan.</li>
@@ -37,7 +37,6 @@
 		  			<ul>
 		  				<li>Put down your phone and sit up!  Something important is about to happen!</li>
 		  			</ul>
-		  			</p>
 	  			</div>
 	  		</section>
 	  		<hr>
@@ -88,10 +87,9 @@
   				</ol>
   				<p class="spacey tall">Thanks for reading, and remember...</p>
   				<p class="emphatic">DON'T PANIC!</p>
-  				<img src="images/hitchhiker.jpg" width="100px" alt="thumb in space" />
+  				<img src="images/hitchhiker.jpg" width="100" alt="thumb in space" />
 	  		</section>
   		</article>
-  		</div>
   		</div>
   	</main>
   	<footer>&copy; 2020 Evil Corporation, Ltd.</footer>
