Add resume and contact pages.

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -50,7 +50,7 @@
 								<a href="/portfolio" class="menu-link"><span class="text-wrap">Portfolio</span></a>
 							</li>
 							<li class="menu-item menu-item-type-post_type menu-item-object-page">
-								<a href="/hire" class="menu-link"><span class="text-wrap">Hire me</span></a>
+								<a href="/contact" class="menu-link"><span class="text-wrap">Contact me</span></a>
 							</li>
 						</ul>
 					</nav>
