Update description for discography app.

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -78,16 +78,17 @@
 					<div id="content" class="site-content">
 						<article class="single-page-article">
 							<div class="entry big-bottom">
-								<div class="wp-block-image">
-									<a href="/discography">
+								<a href="/discography">
+									<div class="wp-block-image">
 										<figure class="aligncenter size-large">
 											<img src="/images/cd_8bit.webp" width="125">
 										</figure>
-									</a>
 								</div>
 								<span class="has-text-align-center"><h2>Complete Discography</h2></span>
+								</a>
 								<p>If you follow an artist who performs in several different bands, this tool is for you. Enter their name to get a list of every album they've released under all of their various bands and aliases.</p>
-								<p>This app uses Python and Flask to retrieve data from Discogs via their handy API. Check out the source code on GitHub.</p>
+								<p>This app uses Python and Flask to retrieve data from Discogs.com.</p>
+								<p>Check out the source code on <a href="https://github.com/dfunklove/complete_discography">GitHub.</a></p>
 							</div>
 							<div class="entry big-bottom">
 								<div class="wp-block-image">
