Update description for discography.

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -87,7 +87,7 @@
 								<span class="has-text-align-center"><h2>Complete Discography</h2></span>
 								</a>
 								<p>If you follow an artist who performs in several different bands, this tool is for you. Enter their name to get a list of every album they've released under all of their various bands and aliases.</p>
-								<p>This app uses Python and Flask to retrieve data from Discogs.com.</p>
+								<p>This app uses Python and Flask to retrieve data from <a href="https://discogs.com">Discogs.com</a>.</p>
 								<p>Check out the source code on <a href="https://github.com/dfunklove/complete_discography">GitHub.</a></p>
 							</div>
 							<div class="entry big-bottom">
