Update links and descriptions for apps.

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -17,23 +17,23 @@ title: Portfolio
 </section>
 <section>
 	<div class="wp-block-image">
-		<a href="/ticker">
+		<a href="/stock-chart">
 			<figure class="aligncenter size-large">
 				<img src="/images/stock_chart_125.png" width="125">
 			</figure>
 		</a>
 	</div>
 	<span class="has-text-align-center"><h2>Stock Chart</h2></span>
-	<p>Provides a stock chart which updates in real time.</p>
+	<p>Real time updates on financial data.</p>
 </section>
 <section>
 	<div class="wp-block-image">
-		<a href="/weather">
+		<a href="/climate-eyes">
 			<figure class="aligncenter size-large">
 				<img src="/images/weather.png" width="125">
 			</figure>
 		</a>
 	</div>
-	<span class="has-text-align-center"><h2>Weather Trends</h2></span>
-	<p>Compare weather patterns over time.</p>
+	<span class="has-text-align-center"><h2>Climate Eyes</h2></span>
+	<p>At-a-glance overview of long term climate trends in your area, or anywhere in the world.</p>
 </section>
