Update title of stock chart.

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -23,7 +23,7 @@ title: Portfolio
 			</figure>
 		</a>
 	</div>
-	<span class="has-text-align-center"><h2>Stock Chart</h2></span>
+	<span class="has-text-align-center"><h2>Real Time Stock Chart</h2></span>
 	<p>Real time updates on financial data.</p>
 </section>
 <section>
