Change description of stock chart.

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -24,7 +24,7 @@ title: Portfolio
 		</a>
 	</div>
 	<span class="has-text-align-center"><h2>Real Time Stock Chart</h2></span>
-	<p>Real time updates on financial data.</p>
+	<p>Instant updates on financial data.</p>
 </section>
 <section>
 	<div class="wp-block-image">
