Add Development Log for Complete Discography.

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -12,8 +12,8 @@ title: Portfolio
 	<span class="has-text-align-center"><h2>Complete Discography</h2></span>
 	</a>
 	<p>If you follow an artist who performs in several different bands, this tool is for you. Enter their name to get a list of every album they've released under all of their various bands and aliases.</p>
-	<p>This app uses Python and Flask to retrieve data from <a href="https://discogs.com">Discogs.com</a>.</p>
-	<p>Check out the source code on <a href="https://github.com/dfunklove/complete_discography">GitHub.</a></p>
+	<p>This app uses Python and Flask to retrieve data from <a href="https://discogs.com">Discogs.com</a>.  The client and server communicate using <a href="https://socket.io">Socket.IO</a>, a full-featured websocket library.</p> 
+	<p>Check out the source code on <a href="https://github.com/dfunklove/complete_discography">GitHub</a>, and read my <a href="discography-log.html">Development Log</a>.</p>
 </section>
 <section>
 	<div class="wp-block-image">
