Add social media links.

--- a/contact/index.html
+++ b/contact/index.html
@@ -21,4 +21,7 @@ title: Contact me
 		</p>
 	<p>I look forward to hearing from you.</p>
 </section>
-<section>You can also check out my projects on <a href="https://github.com/dfunklove">GitHub.</a></section>
+<section>
+<a href="https://github.com/dfunklove"><img src="/images/GitHub-Mark-64px.png"></a>
+<a href="https://www.linkedin.com/in/daniel-lovette-35571766/"><img width="64px" src="/images/LinkedIn-Bug.png"></a>
+</section>
