Add link to stock chart dev log and github.

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -25,6 +25,7 @@ title: Portfolio
 	</div>
 	<span class="has-text-align-center"><h2>Real Time Stock Chart</h2></span>
 	<p>Instant updates on financial data.</p>
+	<p>Read my <a href="stock-chart-log.html">Development Log</a> and check out the source code on <a href="https://github.com/dfunklove/tikka">GitHub.</a></p>
 </section>
 <section>
 	<div class="wp-block-image">
