Minor wording change.

--- a/portfolio/stock-chart-log.html
+++ b/portfolio/stock-chart-log.html
@@ -61,7 +61,7 @@ title: Development Log for Real Time Stock Chart
 <ul>
 <li>Chart.js handles rendering the stock chart itself, as well as animation.</li>
 <li>Autocomplete.js is a lightweight solution to allow users to quickly select from a list of available financial symbols.  Just start typing and the options appear.</li>
-<li>Fuse.js provides fuzzy search.  Each time the user enters a new letter, it searches the list of financial symbols and provides a list of matches.</li>
+<li>Fuse.js provides fuzzy search.  Each time the user enters a new letter, it searches the list of financial symbols and provides a list of matches, which are then passed to Autocomplete.</li>
 </ul>
 
 <h2>Summary</h2>
