Add dev log for climate eyes.

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -37,4 +37,5 @@ title: Portfolio
 	</div>
 	<span class="has-text-align-center"><h2>Climate Eyes</h2></span>
 	<p>At-a-glance overview of long term climate trends in your area, or anywhere in the world.</p>
+	<p>Read my <a href="climate-eyes-log.html">Development Log</a> and check out the source code on <a href="https://github.com/dfunklove/climate_eyes">GitHub</a>.
 </section>
