Update summary and skills.

--- a/resume/index.html
+++ b/resume/index.html
@@ -18,19 +18,15 @@ title: Resume
 		
 			//-->
 		</script>
-	<p>Proficient technical professional with successful track record in software development
-		and technical support. I craft efficient, elegant, and robust solutions to challenging
-		technical problems. Experience developing web applications and APIs in Python, Ruby, JavaScript, and Java.
-		Consistently praised for communicating effectively with both technical and
-		nontechnical users. Known for excellent problem-solving skills and stellar customer
-		service.</p>
+	<p>Software Engineer seeking to work as a team member building software that people care about. Experienced with Ruby on Rails, REST API, SQL, Git, and Agile development. Open to learning and collaboration on best practices.</p>
 </section>
 <section>
 	<span class="has-text-align-center"><h2 class="resume-heading">Skills</h2></span>
 	<ul>
-		<li>Languages: Python, Ruby, JavaScript, Java</li>
-		<li>Platforms: Flask, Rails, jQuery, JSP/Servlets, Tomcat</li>
-		<li>Technologies: OOP, API, REST, WebSockets, SSH, Git, GitHub, SQL, MySQL, Postgres, Nginx, Apache, Tomcat, Linux</li>
+		<li>Languages: Ruby, Python, Java, JavaScript</li>
+		<li>Libraries: Rails, Flask, AsyncIO, BeautifulSoup, Socket.IO, WebSockets</li>
+		<li>Operating Systems: Linux (Ubuntu MATE)</li>
+		<li>Other Technologies: Apache, Git, Gunicorn, NginX, REST API, SQL (MySQL, PostgreSQL), Tomcat</li>
 	</ul>
 </section>
 <section>
