--- a/resume/index.html
+++ b/resume/index.html
@@ -18,7 +18,7 @@ title: Resume
 		
 			//-->
 		</script>
-	<p>Software Engineer seeking to work as a team member building software that people care about. Experienced with Ruby on Rails, REST API, SQL, Git, and Agile development. Open to learning and collaboration on best practices.</p>
+	<p>Software Engineer seeking to work as a team member building software that people care about. Experienced with Ruby on Rails, Python, REST API, SQL, Git, and Agile development. Open to learning and collaboration on best practices.</p>
 </section>
 <section>
 	<span class="has-text-align-center"><h2 class="resume-heading">Skills</h2></span>
