Add Sparks React project.

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -3,6 +3,18 @@ layout: default
 title: Portfolio
 ---
 <section>
+	<a href="/sparks-react">
+		<div class="wp-block-image">
+			<figure class="aligncenter size-large">
+				<img src="/images/fireworks_128.png" width="125">
+			</figure>
+		</div>
+		<span class="has-text-align-center"><h2>Sparks React</h2></span>
+	</a>
+	<p>Made for music therapists to track their lessons and record student progress.  This is a re-imagining in React of the Ruby on Rails project I made for Sparks for Success.  The server side is a GraphQL API made with Python using the Strawberry Django library.</p>
+	<p>Source code: <a href="https://github.com/dfunklove/sparks_react">React</a> and <a href="https://github.com/dfunklove/sparks_graph">GraphQL</a></p>
+</section>
+<section>
 	<a href="/discography">
 		<div class="wp-block-image">
 			<figure class="aligncenter size-large">
