--- a/resume/index.html
+++ b/resume/index.html
@@ -2,7 +2,7 @@
 layout: default
 title: Resume
 ---
-<span class="has-text-align-center resume-heading"><p><a href="Resume_Daniel_Lovette.pdf"><strong>Download Resume.pdf</strong></a></p></span>
+<span class="has-text-align-center resume-heading"><p><a href="https://www.dropbox.com/s/8im0eg1oztgidx0/Resume_Daniel_Lovette.pdf"><strong>Download Resume.pdf</strong></a></p></span>
 <section>
 	<span class="has-text-align-center resume-heading"><p>Daniel Lovette.</p></span>
 	<script TYPE="text/javascript">
@@ -18,15 +18,17 @@ title: Resume
 		
 			//-->
 		</script>
-	<p>Software Engineer seeking to work as a team member building software that people care about. Experienced with Ruby on Rails, Python, REST API, SQL, Git, and Agile development. Open to learning and collaboration on best practices.</p>
+	<p>Software Engineer seeking to work as a team member building software that delights customers. Experienced with Ruby on Rails, React, Python, REST API, SQL, Git, and Agile development. Open to learning and collaboration on best practices.</p>
 </section>
 <section>
 	<span class="has-text-align-center"><h2 class="resume-heading">Skills</h2></span>
 	<ul>
 		<li>Languages: Ruby, Python, Java, JavaScript</li>
-		<li>Libraries: Rails, Flask, AsyncIO, BeautifulSoup, Socket.IO, WebSockets</li>
+		<li>Frameworks: Rails, React, Django, Flask</li>
+		<li>Web Servers: Apache, Gunicorn, NginX, Tomcat</li>
 		<li>Operating Systems: Linux (Ubuntu MATE)</li>
-		<li>Other Technologies: Apache, Git, Gunicorn, NginX, REST API, SQL (MySQL, PostgreSQL), Tomcat</li>
+		<li>Other Technologies: Cucumber, Capybara, Git, GraphQL, REST API, SQL (MariaDB, MySQL,
+PostgreSQL), Websockets</li>
 	</ul>
 </section>
 <section>
