--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -12,6 +12,12 @@ title: Portfolio
 		<span class="has-text-align-center"><h2>Sparks React</h2></span>
 	</a>
 	<p>Made for music therapists to track their lessons and record student progress.  This is a re-imagining in React of the Ruby on Rails project I made for Sparks for Success.  The server side is a GraphQL API made with Python using the Strawberry Django library.</p>
+	<p>Login credentials:
+		<ul>
+			<li>email: test@example.com</li>
+			<li>password: doitforlove</li>
+		</ul>
+	</p>
 	<p>Source code: <a href="https://github.com/dfunklove/sparks_react">React</a> and <a href="https://github.com/dfunklove/sparks_graph">GraphQL</a></p>
 </section>
 <section>
