--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -11,14 +11,8 @@ title: Portfolio
 		</div>
 		<span class="has-text-align-center"><h2>Sparks React</h2></span>
 	</a>
-	<p>Made for music therapists to track their lessons and record student progress.  This is a re-imagining in React of the Ruby on Rails project I made for Sparks for Success.  The server side is a GraphQL API made with Python using the Strawberry Django library.</p>
-	<p>Login credentials:
-		<ul>
-			<li>email: test@example.com</li>
-			<li>password: doitforlove</li>
-		</ul>
-	</p>
-	<p>Source code: <a href="https://github.com/dfunklove/sparks_react">React</a> and <a href="https://github.com/dfunklove/sparks_graph_strawberry">GraphQL</a></p>
+	<p>Made for music therapists to track their lessons and record student progress.  It began as a Ruby on Rails app for my client Sparks for Success; now freshly rebuilt in React for this portfolio.  The server side is a GraphQL API running in Node.js using Apollo, Pothos, and Prisma.</p>
+	<p>Source code: <a href="https://github.com/dfunklove/sparks_react">React</a> and <a href="https://github.com/dfunklove/sparks_graph">GraphQL</a></p>
 </section>
 <section>
 	<a href="/discography">
