--- a/resume/index.html
+++ b/resume/index.html
@@ -18,14 +18,14 @@ title: Resume
 		
 			//-->
 		</script>
-	<p>Software Engineer seeking to work as a team member building software that delights customers. Experienced with Ruby on Rails, React, Python, REST API, SQL, Git, and Agile development. Open to learning and collaboration on best practices.</p>
+		<p>Software Engineer, B.S. Software Engineering with 9 years experience and multiple passion projects. Industries include education, email security, and voice automation. Seeking to pivot from back end to front end development working in React.</p>
 </section>
 <section>
 	<span class="has-text-align-center"><h2 class="resume-heading">Skills</h2></span>
 	<ul>
 		<li>Languages: Ruby, Python, Java, JavaScript</li>
 		<li>Frameworks: Rails, React, Django, Flask</li>
-		<li>Web Servers: Apache, Gunicorn, NginX, Tomcat</li>
+		<li>Web Servers: Apache, Gunicorn, NginX, Node, Tomcat</li>
 		<li>Operating Systems: Linux (Ubuntu MATE)</li>
 		<li>Other Technologies: Cucumber, Capybara, Git, GraphQL, REST API, SQL (MariaDB, MySQL,
 PostgreSQL), Websockets</li>
@@ -38,9 +38,10 @@ PostgreSQL), Websockets</li>
 		<p>Software Development Consultant</p>
 		<p>2018 - present</p>
 		<ul>
+			<li>Design and build new version from scratch in React and Apollo/GraphQL/Node</li>
 			<li>Create Ruby on Rails application to help teachers track music lessons,
 				including Postgres database and web hosting</li>
-			<li>Collect client feedback to ensure product meets their needs</li>
+			<li>Develop automated test suite in Cucumber and Capybara</li>
 			<li>Support users and maintain application via bug fixes and enhancements</li>
 		</ul>
 	</section>
