Change Sparks React to Sparks Spring.

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -3,16 +3,16 @@ layout: default
 title: Portfolio
 ---
 <section>
-	<a href="/sparks-react">
+	<a href="/sparks-spring">
 		<div class="wp-block-image">
 			<figure class="aligncenter size-large">
 				<img src="/images/fireworks_128.png" width="125">
 			</figure>
 		</div>
-		<span class="has-text-align-center"><h2>Sparks React</h2></span>
+		<span class="has-text-align-center"><h2>Sparks Spring</h2></span>
 	</a>
-	<p>Made for music therapists to track their lessons and record student progress.  It began as a Ruby on Rails app for my client Sparks for Success; now freshly rebuilt in React for this portfolio.  The server side is a GraphQL API running in Node.js using Apollo, Pothos, and Prisma.</p>
-	<p>Source code: <a href="https://github.com/dfunklove/sparks_react">React</a> and <a href="https://github.com/dfunklove/sparks_graph">GraphQL</a></p>
+	<p>Made for music therapists to track their lessons and record student progress.  It began as a Ruby on Rails app for my client Sparks for Success; now freshly rebuilt in Spring Boot (Java) for this portfolio.</p>
+	<p>Check out the source code on <a href="https://github.com/dfunklove/sparks_spring">GitHub.</a></p>
 </section>
 <section>
 	<a href="/discography">
